--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "complex": "cpp"
+        "complex": "cpp",
+        "*.tpp": "cpp",
+        "fstream": "cpp"
     }
 }
